adding namespace to the postgresql statefulset

--- a/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  # - statefulset-db.yaml
+  - statefulset-db.yaml
   - deployment-web.yaml
   - deployment-worker.yaml
   - deployment-scheduler.yaml
