--- a/ml-workshop-airflow2/overlays/custom-image/statefulset-db.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/statefulset-db.yaml
@@ -1,13 +1,11 @@
-
-
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: app-aflow-postgresql
+  namespace: "anz-ml"
 spec:
   template:
     spec:
       containers:
         - name: app-aflow-postgresql
           image: 'registry.redhat.io/rhel8/postgresql-10:1-154'
-
