remove namespace from base and overlay

--- a/ml-workshop-airflow2/base/statefulset-db.yaml
+++ b/ml-workshop-airflow2/base/statefulset-db.yaml
@@ -12,7 +12,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: primary
   annotations:
-  namespace: ml-workshop
+  # namespace: ml-workshop
 spec:
   serviceName: app-aflow-postgresql-headless
   replicas: 1
