--- a/ml-workshop-airflow2/overlays/custom-image/statefulset-db.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/statefulset-db.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: app-aflow-postgresql
-  namespace: "anz-ml"
+  # namespace: "anz-ml"
 spec:
   template:
     spec:
