--- a/ml-workshop-airflow2/base/service.yaml
+++ b/ml-workshop-airflow2/base/service.yaml
@@ -117,9 +117,9 @@ spec:
     - name: http
       port: 8080
       targetPort: 8080
-    # - name: internal
-    #   port: 8888
-    #   targetPort: 8888
+    - name: internal
+      port: 8888
+      targetPort: 8888
 
   selector:
     app.kubernetes.io/name: airflow
