fix arguments in mlflow :beers:

--- a/ml-workshop-mlflow/base/mlflow-dc.yaml
+++ b/ml-workshop-mlflow/base/mlflow-dc.yaml
@@ -38,11 +38,16 @@ spec:
           args:
             - mlflow
             - server
-            - '--host 0.0.0.0'
-            - '--port 5500'
-            - '--backend-store-uri postgresql://postgres:postgres@mlflow-db:5432/postgres'
-            - '--default-artifact-root s3://mlflow/'
-            - '--workers 2'
+            - --host
+            - 0.0.0.0
+            - --port
+            - 5500
+            - --backend-store-uri
+            - postgresql://postgres:postgres@mlflow-db:5432/postgres
+            - --default-artifact-root
+            - s3://mlflow/
+            - --workers
+            - 2
           env:
             - name: MLFLOW_S3_ENDPOINT_URL
               value: http://minio-ml-workshop:9000/
