moved to old image

--- a/ml-workshop-airflow2/base/deployment-web.yaml
+++ b/ml-workshop-airflow2/base/deployment-web.yaml
@@ -94,7 +94,8 @@ spec:
           terminationMessagePolicy: File
           image: 'k8s.gcr.io/git-sync/git-sync:v3.2.2'
         - name: airflow-web
-          image: quay.io/ml-aml-workshop/airflow-custom:2.1.6.web
+          image: quay.io/ml-aml-workshop/airflow-custom:2.0.0.web
+          # image: quay.io/ml-aml-workshop/airflow-custom:2.1.6.web
           imagePullPolicy: "Always"
 #          securityContext:
 #            runAsUser: 1001
