--- a/ml-workshop-mlflow/base/mlflow-dc.yaml
+++ b/ml-workshop-mlflow/base/mlflow-dc.yaml
@@ -40,7 +40,7 @@ spec:
             - server
             - --host=0.0.0.0
             - --port=5500
-            - --backend-store-uri=postgresql://postgres:postgres@mlflow-db:5432/postgres
+            - --backend-store-uri=postgresql://postgres:admin@mlflow-db:5432/postgres
             - --default-artifact-root=s3://mlflow/
             - --workers=2
           env:
