adding SA to the airflow and assigning the RBAC to the SA as namespace admin

--- a/ml-workshop-airflow2/base/deployment-scheduler.yaml
+++ b/ml-workshop-airflow2/base/deployment-scheduler.yaml
@@ -33,7 +33,7 @@ spec:
       priorityClassName: ""
       # securityContext:
       #   fsGroup: 1001
-      serviceAccountName: default
+      # serviceAccountName: default
       affinity:
         podAffinity:
 
@@ -141,4 +141,6 @@ spec:
       volumes:
         - name: dags-data
           emptyDir: { }
+      serviceAccount: airflow2-core
+      serviceAccountName: airflow2-core
 
