--- a/ml-workshop-airflow2/base/deployment-worker.yaml
+++ b/ml-workshop-airflow2/base/deployment-worker.yaml
@@ -36,7 +36,7 @@ spec:
       priorityClassName: ""
 #      securityContext:
 #        fsGroup: 1001
-      serviceAccountName: default
+      # serviceAccountName: default
       affinity:
         podAffinity:
 
@@ -162,4 +162,5 @@ spec:
       volumes:
         - name: dags-data
           emptyDir: { }
-
+      serviceAccount: airflow2-core
+      serviceAccountName: airflow2-core
