--- a/jupyterhub/jupyterhub/overlays/custom-image/jupyterhub-singleuser-profiles-configmap.yaml
+++ b/jupyterhub/jupyterhub/overlays/custom-image/jupyterhub-singleuser-profiles-configmap.yaml
@@ -19,21 +19,16 @@ data:
 
       - name: Spark Notebook
         images:
-        - 's2i-spark-minimal-notebook:3.6'
-        - 's2i-spark-scipy-notebook:3.6'
-        - 's2i-spark-minimal-notebook:py36-spark2.4.5-hadoop2.7.3'
-        - 's2i-lab-elyra:v0.0.8'
+        - 'elyra-spark:0.0.3'
         env:
-          - name: PYSPARK_SUBMIT_ARGS
-            value: '--conf spark.cores.max=2 --conf spark.executor.instances=2 --conf spark.executor.memory=1G --conf spark.executor.cores=1 --conf spark.driver.memory=2G --packages com.amazonaws:aws-java-sdk:1.7.4,org.apache.hadoop:hadoop-aws:2.7.3 pyspark-shell'
-          - name: PYSPARK_DRIVER_PYTHON
-            value: 'jupyter'
-          - name: PYSPARK_DRIVER_PYTHON_OPTS
-            value: 'notebook'
-          - name: SPARK_HOME
-            value: '/opt/app-root/lib/python3.6/site-packages/pyspark/'
-          - name: PYTHONPATH
-            value: '$PYTHONPATH:/opt/app-root/lib/python3.6/site-packages/:/opt/app-root/lib/python3.6/site-packages/pyspark/python/:/opt/app-root/lib/python3.6/site-packages/pyspark/python/lib/py4j-0.8.2.1-src.zip'
+        - name: PYSPARK_SUBMIT_ARGS
+          value: '--conf spark.cores.max=2 --conf spark.executor.instances=2 --conf spark.executor.memory=1G --conf spark.executor.cores=1 --conf spark.driver.memory=2G --packages org.apache.hadoop:hadoop-aws:3.2.0 pyspark-shell'
+        - name: PYSPARK_DRIVER_PYTHON
+          value: 'jupyter'
+        - name: PYSPARK_DRIVER_PYTHON_OPTS
+          value: 'notebook'
+        - name: PYTHONPATH
+          value: '$PYTHONPATH:/opt/app-root/lib/python3.8/site-packages/:/opt/app-root/lib/python3.8/site-packages/pyspark/python/:/opt/app-root/lib/python3.8/site-packages/pyspark/python/lib/py4j-0.10.9-src.zip'
         services:
           spark:
             resources:
@@ -52,6 +47,6 @@ data:
               worker_cpu_limit: '1'
               worker_memory_request: '2Gi'
               worker_cpu_request: '1'
-              spark_image: 'quay.io/radanalyticsio/openshift-spark-py36:2.4.5-2'
+              spark_image: quay.io/ml-aml-workshop/spark3:ross
             return:
               SPARK_CLUSTER: 'metadata.name'
