🐦 make pvc munts persistent across jhub sawn 🐦

--- a/jupyterhub/jupyterhub/overlays/ml-workshop/kustomization.yaml
+++ b/jupyterhub/jupyterhub/overlays/ml-workshop/kustomization.yaml
@@ -5,7 +5,7 @@ bases:
 
 patchesStrategicMerge:
   - jupyterhub-singleuser-profiles-sizes-configmap.yaml
-
+  - jupyterhub-configmap.yaml
 
 commonLabels:
   opendatahub.io/component: "true"
