--- a/ml-workshop-airflow2/base/deployment.yaml
+++ b/ml-workshop-airflow2/base/deployment.yaml
@@ -305,8 +305,12 @@ spec:
               value: "True"
             - name: OAUTH_API_BASE_URL
               value: "https://openshift.default.svc.cluster.local:443"
+            # - name: REQUESTS_CA_BUNDLE
+            #   value: "/opt/bitnami/python/lib/python3.8/site-packages/certifi/cacert.pem" 
             - name: REQUESTS_CA_BUNDLE
-              value: "/opt/bitnami/python/lib/python3.8/site-packages/certifi/cacert.pem" 
+              value: "" 
+            - name: CURL_CA_BUNDLE
+              value: "" 
             - name: AUTH_ROLE_PUBLIC 
               value: "Public"
             - name: AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX
