--- a/ml-workshop-airflow2/base/deployment.yaml
+++ b/ml-workshop-airflow2/base/deployment.yaml
@@ -316,11 +316,11 @@ spec:
             - name: AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX
               value: "True"
             - name: OAUTH_REDIRECT_URL
-              value:  https://ap2-airflow2-ml-workshop.apps.cluster-fxdfp.fxdfp.sandbox1120.opentlc.com
+              value:  https://ap2-airflow2-ml-workshop.apps.cluster-wqs7w.wqs7w.sandbox1012.opentlc.com
             - name: OAUTH_TOKEN_URL
-              value: https://oauth-openshift.apps.cluster-fxdfp.fxdfp.sandbox1120.opentlc.com/oauth/token
+              value: https://oauth-openshift.apps.cluster-wqs7w.wqs7w.sandbox1012.opentlc.com/oauth/token
             - name: OAUTH_AUTHORIZE_URL
-              value: https://oauth-openshift.apps.cluster-fxdfp.fxdfp.sandbox1120.opentlc.com/oauth/authorize
+              value: https://oauth-openshift.apps.cluster-wqs7w.wqs7w.sandbox1012.opentlc.com/oauth/authorize
             - name: AIRFLOW_NAMESPACE
               value: ml-workshop
             - name: SA_SECRET_KEY
