--- a/ml-workshop-airflow2/base/kustomization.yaml
+++ b/ml-workshop-airflow2/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - service.yaml
   - service-accounts.yaml
   - route.yaml
+  - default-role-binding.yaml
 
 commonLabels:
   opendatahub.io/component: "false"
