moved to centos pgsql for consistency

--- a/jupyterhub/jupyterhub/overlays/ml-workshop/kustomization.yaml
+++ b/jupyterhub/jupyterhub/overlays/ml-workshop/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 patchesStrategicMerge:
   - jupyterhub-singleuser-profiles-sizes-configmap.yaml
   - jupyterhub-configmap.yaml
+  - jupyterhub-db-dc.yaml
 
 commonLabels:
   opendatahub.io/component: "true"
