added some more custom imags, not used yet.

--- a/jupyterhub/notebook-images/overlays/custom-extensions/elyra-notebook-base-imagestream.yaml
+++ b/jupyterhub/notebook-images/overlays/custom-extensions/elyra-notebook-base-imagestream.yaml
@@ -5,18 +5,24 @@ metadata:
     opendatahub.io/notebook-image: "true"
   annotations:
     opendatahub.io/notebook-image-url: "https://github.com/thoth-station/s2i-lab-elyra"
-    opendatahub.io/notebook-image-name: "Elyra Notebook Image"
-    opendatahub.io/notebook-image-desc: "Jupyter notebook image with Elyra-AI installed"
+    opendatahub.io/notebook-image-name: "Base Elyra Notebook Image"
+    opendatahub.io/notebook-image-desc: "Jupyter notebook image with Elyra-AI installed - OOB"
   name: s2i-lab-elyra
 spec:
   lookupPolicy:
-    local: true
+    local: false
   tags:
   - annotations:
       openshift.io/imported-from: quay.io/thoth-station/s2i-lab-elyra
     from:
       kind: DockerImage
+      # name: quay.io/thoth-station/s2i-lab-elyra:v0.0.13
       name: quay.io/thoth-station/s2i-lab-elyra:v0.1.1
-    name: "v0.1.1"
+    name: latest
     referencePolicy:
       type: Source
+status: 
+  tags:
+    - tag: latest
+      # dockerImageReference: quay.io/thoth-station/s2i-lab-elyra:v0.0.13
+      dockerImageReference: quay.io/thoth-station/s2i-lab-elyra:v0.1.1
