--- a/ml-workshop-mlflow/overlays/custom-image/mlflow-postgesql-statefulset.yaml
+++ b/ml-workshop-mlflow/overlays/custom-image/mlflow-postgesql-statefulset.yaml
@@ -7,4 +7,5 @@ spec:
     spec:
       containers:
         - name: mlflow-db-postgresql
-          image: 'registry.redhat.io/rhel8/postgresql-10:1-154'
+          # image: 'registry.redhat.io/rhel8/postgresql-10:1-154'
+          image: 'quay.io/internaldatahub/postgresql-96-centos7:9.6'
