--- a/ml-workshop-airflow2/base/statefulset-db.yaml
+++ b/ml-workshop-airflow2/base/statefulset-db.yaml
@@ -100,6 +100,9 @@ spec:
             #     secretKeyRef:
             #       name: app-aflow-postgresql
             #       key: postgresql-postgres-password
+            - name: PGDATA
+              value: /var/lib/pgsql/data/pgdata
+
             - name: POSTGRESQL_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -180,6 +183,7 @@ spec:
             - name: aflow-data
               # mountPath: /bitnami/postgresql
               mountPath: /var/lib/pgsql/data
+              subPath: pgdata
               # subPath:
       # volumes:
       #   - name: dshm
