--- a/ml-workshop-airflow2/base/deployment-web.yaml
+++ b/ml-workshop-airflow2/base/deployment-web.yaml
@@ -167,7 +167,12 @@ spec:
                 secretKeyRef:
                   name: airflow2-proxy
                   key: token
-
+            - name: OAUTH_REDIRECT_URL
+              value: $(OCP_APPS_URI)
+            - name: OAUTH_TOKEN_URL
+              value: $(OCP_APPS_URI)/oauth/token
+            - name: OAUTH_AUTHORIZE_URL
+              value: $(OCP_APPS_URI)/oauth/authorize
           ports:
             - name: http
               containerPort: 8080
