fixed the values

--- a/ml-workshop-airflow2/base/deployment-web.yaml
+++ b/ml-workshop-airflow2/base/deployment-web.yaml
@@ -168,11 +168,11 @@ spec:
                   name: airflow2-proxy
                   key: token
             - name: OAUTH_REDIRECT_URL
-              value: $(OCP_APPS_URI)
+              value: https://ap-airflow2-ml-workshop$(OCP_APPS_URI)
             - name: OAUTH_TOKEN_URL
-              value: $(OCP_APPS_URI)/oauth/token
+              value: https://oauth-openshift$(OCP_APPS_URI)/oauth/token
             - name: OAUTH_AUTHORIZE_URL
-              value: $(OCP_APPS_URI)/oauth/authorize
+              value: https://oauth-openshift$(OCP_APPS_URI)/oauth/authorize
           ports:
             - name: http
               containerPort: 8080
