:fire: give cluster-admin rights to the airflow-core and default users. not good for production 🚫

--- a/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
@@ -8,6 +8,7 @@ patchesStrategicMerge:
   - deployment-worker.yaml
   - deployment-scheduler.yaml
   - statefulset-redis.yaml
+  - rbac.yaml
 # namespace: anz-ml
 # configurations:
 #   - params.yaml
