--- a/ml-workshop-airflow2/overlays/custom-image/rbac.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/rbac.yaml
@@ -1,3 +1,5 @@
+# this is not recommended for production or shared environments.
+# there are valid rbac roles available and it is recommended to use the right and restrictive roles.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -9,4 +11,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: airflow2-core
+  namespace: ml-workshop
+- kind: ServiceAccount
+  name: default
   namespace: ml-workshop
