--- a/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
@@ -2,13 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
   - ../../base
+
+resources:
+  - rbac.yaml
 patchesStrategicMerge:
   - statefulset-db.yaml
   - deployment-web.yaml
   - deployment-worker.yaml
   - deployment-scheduler.yaml
   - statefulset-redis.yaml
-  - rbac.yaml
 # namespace: anz-ml
 # configurations:
 #   - params.yaml
