add pgsql connection and a database

--- a/trino/overlays/ml-workshop/trino-catalog-secret.yaml
+++ b/trino/overlays/ml-workshop/trino-catalog-secret.yaml
@@ -20,6 +20,11 @@ stringData:
     kafka.nodes=odh-message-bus-kafka-bootstrap:9092
     kafka.table-names=data
     kafka.hide-internal-columns=false
+  postgresql.properties: |
+    connector.name=postgresql
+    connection-url=jdbc:postgresql://trinodb:5432/customers
+    connection-user=postgres
+    connection-password=postgres
   customerchurn.json: |
    {
     "tableName": "data",
