add pgsql connection and a database

--- a/trino/overlays/ml-workshop/trino-catalog-secret.yaml
+++ b/trino/overlays/ml-workshop/trino-catalog-secret.yaml
@@ -22,7 +22,7 @@ stringData:
     kafka.hide-internal-columns=false
   postgresql.properties: |
     connector.name=postgresql
-    connection-url=jdbc:postgresql://trinodb:5432/customers
+    connection-url=jdbc:postgresql://customerdatadb:5432/customers
     connection-user=postgres
     connection-password=postgres
   customerchurn.json: |
