--- a/trino/overlays/ml-workshop/trino-worker-dc.yaml
+++ b/trino/overlays/ml-workshop/trino-worker-dc.yaml
@@ -16,6 +16,8 @@ spec:
                 path: hive.properties
               - key: customerchurn.properties
                 path: customerchurn.properties
+              - key: postgresql.properties
+                path: postgresql.properties
 
         - name: trino-kafka-volume
           secret:
