--- a/trino/overlays/ml-workshop/postgresql-data-stateful-set.yaml
+++ b/trino/overlays/ml-workshop/postgresql-data-stateful-set.yaml
@@ -48,7 +48,7 @@ spec:
               memory: 256Mi
           env:
             - name: POSTGRESQL_ADMIN_PASSWORD
-              value: "secret"
+              value: "postgres"
             - name: POSTGRESQL_USER
               value: "postgres"
             - name: POSTGRESQL_PASSWORD
