add runAsUser to pgsql 🏉

--- a/jupyterhub/jupyterhub/base/jupyterhub-db-dc.yaml
+++ b/jupyterhub/jupyterhub/base/jupyterhub-db-dc.yaml
@@ -21,6 +21,10 @@ spec:
       annotations:
         sidecar.istio.io/inject: "true"
     spec:
+      securityContext:
+        fsGroup: 26
+        runAsUser: 26
+
       containers:
       - image: registry.redhat.io/rhel8/postgresql-96
         env:
