--- a/ml-workshop-mlflow/base/mlflow-postgesql-statefulset.yaml
+++ b/ml-workshop-mlflow/base/mlflow-postgesql-statefulset.yaml
@@ -57,6 +57,10 @@ spec:
       #       - name: mlflow-db-data
       #         mountPath: /bitnami/postgresql
       # #              subPath:
+      securityContext:
+        fsGroup: 26
+        runAsUser: 26
+
       containers:
         - name: mlflow-db-postgresql
           image: quay.io/internaldatahub/postgresql-96-centos7:9.6
