--- a/kafka/kafka/base/kafka-cluster.yaml
+++ b/kafka/kafka/base/kafka-cluster.yaml
@@ -5,7 +5,7 @@ metadata:
   name: odh-message-bus
 spec:
   kafka:
-    version: 2.7.0
+    version: 3.0.0
     replicas: 3
     listeners:
       - name: plain
@@ -24,16 +24,16 @@ spec:
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
       transaction.state.log.min.isr: 3
-      log.message.format.version: '2.7'
-      inter.broker.protocol.version: '2.7'
+      log.message.format.version: '3.0'
+      inter.broker.protocol.version: '3.0'
     storage:
       type: ephemeral
     metricsConfig:
       type: jmxPrometheusExporter
       valueFrom:
         configMapKeyRef:
-          name: kafka-metrics-config
-          key: kafka-prometheus-metrics
+          name: kafka-metrics
+          key: kafka-metrics-config.yml
   zookeeper:
     replicas: 3
     storage:
@@ -42,8 +42,8 @@ spec:
       type: jmxPrometheusExporter
       valueFrom:
         configMapKeyRef:
-          name: kafka-metrics-config
-          key: zookeeper-prometheus-metrics
+          name: kafka-metrics
+          key: zookeeper-metrics-config.yml
   entityOperator:
     topicOperator: {}
     userOperator: {}
