--- a/kfdef/ml-workshop-limited.yaml
+++ b/kfdef/ml-workshop-limited.yaml
@@ -92,6 +92,25 @@ spec:
           name: manifests
           path: ml-workshop-minio
       name: minio
+    # add kafka  
+    - kustomizeConfig:
+        parameters:
+          - name: namespace
+            value: openshift-operators
+        repoRef:
+          name: manifests
+          path: kafka/cluster
+      name: strimzi-operator
+    - kustomizeConfig:
+        repoRef:
+          name: manifests
+          path: kafka/kafka
+      name: kafka-cluster
+    - kustomizeConfig:
+        repoRef:
+          name: manifests
+          path: ml-workshop-kafka-populator
+      name: kafka-populator      
   repos:
     - name: kf-manifests
       uri: https://github.com/kubeflow/manifests/archive/v1.2-branch.tar.gz
