--- a/ml-workshop-airflow2/base/secrets.yaml
+++ b/ml-workshop-airflow2/base/secrets.yaml
@@ -46,3 +46,17 @@ data:
   airflow-password: "a3VYaW1tbXhDVw=="
 
   airflow-fernetKey: "VEdKeGRXMXhUVU5KTWpCclVuUXlRblF5VVhOUlFUSjFjbEp6TWpoWVJVMD0="
+---
+# Source: airflow/charts/redis/templates/secret.yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: airflow-auth-cert
+  namespace: "ml-workshop"
+  labels:
+    app.kubernetes.io/name: airflow
+    app.kubernetes.io/instance: app-aflow
+type: Opaque
+stringData:
+  ca.crt: "change"
+  
