secret managed outside of ODH

--- a/ml-workshop-airflow2/base/secrets.yaml
+++ b/ml-workshop-airflow2/base/secrets.yaml
@@ -48,15 +48,15 @@ data:
   airflow-fernetKey: "VEdKeGRXMXhUVU5KTWpCclVuUXlRblF5VVhOUlFUSjFjbEp6TWpoWVJVMD0="
 ---
 # Source: airflow/charts/redis/templates/secret.yaml
-apiVersion: v1
-kind: Secret
-metadata:
-  name: airflow-auth-cert
-  namespace: "ml-workshop"
-  labels:
-    app.kubernetes.io/name: airflow
-    app.kubernetes.io/instance: app-aflow
-type: Opaque
-stringData:
-  ca.crt: "change"
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: airflow-auth-cert
+#   namespace: "ml-workshop"
+#   labels:
+#     app.kubernetes.io/name: airflow
+#     app.kubernetes.io/instance: app-aflow
+# type: Opaque
+# stringData:
+#   ca.crt: "change"
   
