create secret for airflow automatically

--- a/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 
 resources:
   - rbac.yaml
+  - cert-secret-job.yaml
 patchesStrategicMerge:
   - statefulset-db.yaml
   - deployment-web.yaml
