put the right image

--- a/ml-workshop-airflow2/overlays/custom-image/cert-secret-job.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/cert-secret-job.yaml
@@ -10,7 +10,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: airflow-create-secret-container
-          image: 'registry.redhat.io/openshift4/ose-cli:v4.7'
+          image: 'quay.io/ml-on-k8s/oc-client:v4.9v2'
           imagePullPolicy: IfNotPresent
 
           command:
