--- a/ml-workshop-airflow2/overlays/custom-image/cert-secret-job.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/cert-secret-job.yaml
@@ -16,7 +16,7 @@ spec:
           command:
             - /bin/sh
             - -c
-            - "echo | openssl s_client -showcerts -servername openshift.default.svc.cluster.local -connect openshift.default.svc.cluster.local:443 > /tmp/cert.txt && sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' /tmp/cert.txt > /tmp/ca.crt && oc create secret airflow-auth-cert --from-file=ca.crt=/tmp/ca.crt -n ml-workshop"
+            - "echo | openssl s_client -showcerts -servername openshift.default.svc.cluster.local -connect openshift.default.svc.cluster.local:443 > /tmp/cert.txt && sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' /tmp/cert.txt > /tmp/ca.crt && oc create secret generic airflow-auth-cert --from-file=ca.crt=/tmp/ca.crt -n ml-workshop"
 
 
 
