--- a/jupyterhub/jupyterhub/overlays/custom-image/jupyterhub-singleuser-profiles-configmap.yaml
+++ b/jupyterhub/jupyterhub/overlays/custom-image/jupyterhub-singleuser-profiles-configmap.yaml
@@ -4,6 +4,21 @@ metadata:
   name: jupyter-singleuser-profiles
 data:
   jupyterhub-singleuser-profiles.yaml: |
+      ui:
+        gpuConfig:
+          enabled: true
+          type: dropdown
+          gpuDropdown:
+            start: 0
+        envVarConfig:
+          enabled: true
+          categories:
+          - name: AWS
+            variables:
+            - name: AWS_ACCESS_KEY_ID
+              type: password
+            - name: AWS_SECRET_ACCESS_KEY
+              type: password    
       profiles:
       - name: globals
         env:
