--- a/jupyterhub/jupyterhub/overlays/custom-image/kustomization.yaml
+++ b/jupyterhub/jupyterhub/overlays/custom-image/kustomization.yaml
@@ -4,7 +4,7 @@ bases:
   - ../../base
 patchesStrategicMerge:
   - jupyterhub-db-dc.yaml
-  - jupyterhub-dc.yaml
+  # - jupyterhub-dc.yaml
   - jupyterhub-singleuser-profiles-configmap.yaml
 
   
