--- a/trino/overlays/ml-workshop/postgresql-data-stateful-set.yaml
+++ b/trino/overlays/ml-workshop/postgresql-data-stateful-set.yaml
@@ -54,7 +54,7 @@ spec:
             - name: POSTGRESQL_PASSWORD
               value: "postgres"
             - name: POSTGRESQL_DATABASE
-              value: "postgres"
+              value: "customers"
             - name: PGDATA
               value: /var/lib/pgsql/data/pgdata
 
