--- a/superset/overlays/custom-image/deployment.yaml
+++ b/superset/overlays/custom-image/deployment.yaml
@@ -7,8 +7,10 @@ spec:
     spec:
       initContainers:
       - name: superset-init
-        image: quay.io/internaldatahub/superset:1.3.0
+#        image: quay.io/internaldatahub/superset:1.3.0
+        image: quay.io/opendatahub/superset:1.4.1-ubi
       containers:
       - name: superset
         # image: quay.io/internaldatahub/superset:1.1.0
-        image: quay.io/internaldatahub/superset:1.3.0
+#        image: quay.io/internaldatahub/superset:1.3.0
+        image: quay.io/opendatahub/superset:1.4.1-ubi
