--- a/jupyterhub/notebook-images/base/kustomization.yaml
+++ b/jupyterhub/notebook-images/base/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-# resources:
-# - spark-notebook-imagestream.yaml
-# - nbviewer-imagestream.yaml
+resources:
+- spark-notebook-imagestream.yaml
+- nbviewer-imagestream.yaml
+- predictive-maint-notebook-imagestream.yaml
 
 commonLabels:
   opendatahub.io/component: "true"
