--- a/jupyterhub/notebook-images/base/predictive-maint-notebook-imagestream.yaml
+++ b/jupyterhub/notebook-images/base/predictive-maint-notebook-imagestream.yaml
@@ -4,8 +4,8 @@ metadata:
   labels:
     opendatahub.io/notebook-image: "true"
   annotations:
-    opendatahub.io/notebook-image-name: "Minimal Python with Apache Spark"
-  name: s2i-spark-minimal-notebook
+    opendatahub.io/notebook-image-name: "Sample TF Notebook used for pred maintainence"
+  name: pred-maintainence-notebook
 spec:
   lookupPolicy:
     local: true
