--- a/ml-workshop-minio/base/minio-dc.yaml
+++ b/ml-workshop-minio/base/minio-dc.yaml
@@ -49,7 +49,7 @@ spec:
             successThreshold: 1
             failureThreshold: 10
 
-          image: docker.io/minio/minio:latest
+          image: docker.io/minio/minio:RELEASE.2022-07-06T20-29-49Z.fips
           imagePullPolicy: IfNotPresent
           resources: {}
           args:
