--- a/thriftserver/thriftserver/base/thriftserver-db.yaml
+++ b/thriftserver/thriftserver/base/thriftserver-db.yaml
@@ -92,7 +92,6 @@ spec:
             privileged: false
       volumes:
         - name: "postgresql-data"
-          persistentVolumeClaim:
-            claimName: thriftserver-db
+          emptyDir: {}
       restartPolicy: Always
       dnsPolicy: ClusterFirst
