--- a/hue/hue/base/hue-mysql.yaml
+++ b/hue/hue/base/hue-mysql.yaml
@@ -106,7 +106,6 @@ spec:
             privileged: false
       volumes:
         - name: mysql
-          persistentVolumeClaim:
-            claimName: hue-mysql
+          emptyDir: {}
       restartPolicy: Always
       dnsPolicy: ClusterFirst
