--- a/trino-rbac/overlays/ml-workshop/postgresql-data-stateful-set.yaml
+++ b/trino-rbac/overlays/ml-workshop/postgresql-data-stateful-set.yaml
@@ -91,6 +91,6 @@ spec:
 #      spec:
 #        accessModes:
 #          - "ReadWriteOnce"
-        resources:
-          requests:
-            storage: "8Gi"
+#        resources:
+#          requests:
+#            storage: "8Gi"
